--- a/Conservapp/Conservapp/Conservapp/Views/LoginPage.xaml
+++ b/Conservapp/Conservapp/Conservapp/Views/LoginPage.xaml
@@ -3,12 +3,120 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:d="http://xamarin.com/schemas/2014/forms/design"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+             xmlns:vm="clr-namespace:Conservapp.ViewModels"
              mc:Ignorable="d"
              x:Class="Conservapp.Views.LoginPage"
-             Shell.NavBarIsVisible="False">
+             BackgroundImageSource="background">
+    <ContentPage.BindingContext>
+        <vm:LoginViewModel />
+    </ContentPage.BindingContext>
     <ContentPage.Content>
-        <StackLayout Padding="10,0,10,0" VerticalOptions="Center">
-            <Button VerticalOptions="Center" Text="Login" Command="{Binding LoginCommand}"/>
-        </StackLayout>
+
+        <ScrollView>
+            <StackLayout>
+                <StackLayout VerticalOptions="EndAndExpand" 
+                             HorizontalOptions="FillAndExpand">
+                    <StackLayout Orientation="Vertical" Margin="40,70">
+                        <Image Source="ico_logo.png"
+                       WidthRequest="300"
+                       HeightRequest="120"/>
+
+                        <StackLayout  VerticalOptions="Center" 
+                              HorizontalOptions="Center" 
+                              WidthRequest="330" 
+                              BackgroundColor="White" 
+                     Orientation="Horizontal">
+                            <Image Source="Usericon.png" 
+                           WidthRequest="25" 
+                           HorizontalOptions="Center" 
+                           VerticalOptions="Center"/>
+
+                            <Entry x:Name="User_Entry" 
+                           TextColor="{StaticResource Negro}" 
+                           Placeholder="Usuario" 
+                           HeightRequest="45" 
+                           PlaceholderColor="{StaticResource Negro}" 
+                           Keyboard="Text" 
+                           FontSize="18" 
+                           HorizontalTextAlignment="Start"
+                           WidthRequest="250"
+                           Text="{Binding uSer_Entry, Mode=TwoWay}"
+                       />
+                        </StackLayout>
+
+                        <StackLayout BackgroundColor="White" 
+                             VerticalOptions="Center" 
+                             HorizontalOptions="Center" 
+                             WidthRequest="330" 
+                             Orientation="Horizontal">
+                            <Image Source="Lockicon.png" 
+                           WidthRequest="25" 
+                           HorizontalOptions="Center" 
+                           VerticalOptions="Center"/>
+
+                            <Entry x:Name="Password_Entry" 
+                           TextColor="{StaticResource Negro}" 
+                           Placeholder="Contraseña" 
+                           PlaceholderColor="{StaticResource Negro}" 
+                           IsPassword="True" 
+                           FontSize="18" 
+                           HorizontalTextAlignment="Start"
+                           WidthRequest="250"
+                           Text="{Binding pAss_Entry, Mode=TwoWay}"/>
+                        </StackLayout>
+                        <!--<StackLayout>
+                            <Label  HorizontalOptions="CenterAndExpand" 
+                        TextColor="{StaticResource Negro}"
+                        VerticalOptions="StartAndExpand">
+                                <Label.FormattedText>
+                                    <FormattedString>
+                                        <Span Text="¿Olvidaste" />
+                                        <Span FontAttributes="Bold"
+                                  Text=" tu contraseña?">
+                                            <Span.GestureRecognizers>
+                                                <TapGestureRecognizer  />
+                                            </Span.GestureRecognizers>
+                                        </Span>
+                                    </FormattedString>
+                                </Label.FormattedText>
+                            </Label>
+                        </StackLayout>-->
+
+                        <Button  
+                        Text="Iniciar sesión" 
+                        BorderRadius="10"
+                        BackgroundColor="{StaticResource Negro}" 
+                        TextColor="{StaticResource Verde}" 
+                        FontSize="18" 
+                        Command="{Binding IngresarCommand}"
+                        />
+
+
+                    </StackLayout>
+
+                </StackLayout>
+                <StackLayout  VerticalOptions="EndAndExpand">
+                    <Grid VerticalOptions="EndAndExpand">
+                        <ContentPresenter Grid.Row="0" VerticalOptions="EndAndExpand"/>
+                        <BoxView Grid.Row="1" VerticalOptions="EndAndExpand" Color="{StaticResource Negro}"/>
+                        <StackLayout Grid.Row="1" VerticalOptions="EndAndExpand" >
+                            <Label x:Name="linkcsicontrlsoft"
+                               Text="www.conservapp.com"  
+                               FontSize="Medium" 
+                               FontAttributes="Bold"
+                               VerticalOptions="EndAndExpand" 
+                               HorizontalOptions="CenterAndExpand" 
+                               TextColor="{StaticResource Verde}">
+                                <Label.GestureRecognizers>
+                                    <TapGestureRecognizer Command="{Binding OpenUrlCommand}" />
+                                </Label.GestureRecognizers>
+                            </Label>
+                        </StackLayout>
+                    </Grid>
+                </StackLayout>
+            </StackLayout>
+
+        </ScrollView>
+
     </ContentPage.Content>
 </ContentPage>
