--- a/Conservapp/Conservapp/Conservapp/AppShell.xaml
+++ b/Conservapp/Conservapp/Conservapp/AppShell.xaml
@@ -78,15 +78,20 @@
         FlyoutDisplayOptions="AsMultipleItems" will create a separate flyout item for each child element    
         https://docs.microsoft.com/dotnet/api/xamarin.forms.shellgroupitem.flyoutdisplayoptions?view=xamarin-forms
     -->
-    <FlyoutItem Title="About" Icon="icon_about.png">
+    <FlyoutItem Title="Inicio" Icon="icon_home.png">
         <ShellContent Route="AboutPage" ContentTemplate="{DataTemplate local:AboutPage}" />
     </FlyoutItem>
-    <FlyoutItem Title="Browse" Icon="icon_feed.png">
+    <FlyoutItem Title="Formulario" Icon="icon_report.png">
         <ShellContent Route="ItemsPage" ContentTemplate="{DataTemplate local:ItemsPage}" />
     </FlyoutItem>
-
+    <FlyoutItem Title="Mapa" Icon="icon_map.png">
+        <ShellContent Route="ItemsPage" ContentTemplate="{DataTemplate local:ItemsPage}" />
+    </FlyoutItem>
     <!-- When the Flyout is visible this will be a menu item you can tie a click behavior to  -->
-    <MenuItem Text="Logout" StyleClass="MenuItemLayoutStyle" Clicked="OnMenuItemClicked">
+    <MenuItem Text="Cerrar Sesiones"
+              IconImageSource="icon_exit"
+              StyleClass="MenuItemLayoutStyle"
+              Clicked="OnMenuItemClicked">
     </MenuItem>
 
     <!--
@@ -100,6 +105,19 @@
         <ShellContent Route="LoginPage" ContentTemplate="{DataTemplate local:LoginPage}" />
     </TabBar>
 
+    <Shell.FlyoutHeaderTemplate>
+        <DataTemplate>
+            <Grid>
+                <Image 
+                    Aspect="AspectFill"
+                    WidthRequest="150"
+                    HeightRequest="70"
+               Source="Dashboardshell"
+               Opacity="0.7" />
+
+            </Grid>
+        </DataTemplate>
+    </Shell.FlyoutHeaderTemplate>
     <!-- Optional Templates 
     // These may be provided inline as below or as separate classes.
 
