--- a/Conservapp/Conservapp/Conservapp/AppShell.xaml
+++ b/Conservapp/Conservapp/Conservapp/AppShell.xaml
@@ -85,7 +85,7 @@
         <ShellContent Route="ItemsPage" ContentTemplate="{DataTemplate local:ItemsPage}" />
     </FlyoutItem>
     <FlyoutItem Title="Mapa" Icon="icon_map.png">
-        <ShellContent Route="ItemsPage" ContentTemplate="{DataTemplate local:ItemsPage}" />
+        <ShellContent Route="ItemsPage" ContentTemplate="{DataTemplate local:MapPage}" />
     </FlyoutItem>
     <!-- When the Flyout is visible this will be a menu item you can tie a click behavior to  -->
     <MenuItem Text="Cerrar Sesiones"
