--- a/Conservapp/Conservapp/Conservapp/Views/AboutPage.xaml
+++ b/Conservapp/Conservapp/Conservapp/Views/AboutPage.xaml
@@ -22,7 +22,7 @@
                          Padding="30,24,30,24" 
                          Spacing="10">
                 <Label 
-                    Text="Reporte de inspección"
+                    Text="Ficha de Identificación del inmueble"
                     HorizontalOptions="CenterAndExpand"
                     TextColor="{StaticResource Blanco}"
                     FontSize="Title"/>
